--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "react_game",
+  "engines": {
+    "node":">=8.8.0"
+  },
   "version": "0.1.0",
   "private": true,
   "dependencies": {
